# stalker

./: .dockerignore  .gitignore  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  Stalker.code-workspace  devspace.base.yaml  devspace.dev.yaml.template  devspace.tests.yaml  devspace.yaml  docker-compose.cicd.yml  docker-compose.test.yml  docker-compose.yml  init_ubuntu.sh  jest.config.js  network-policy.yml  package-lock.json  package.json  recon_automation.py  requirements.txt  rk  root-ca.yml  root-ca.yml.dev.template  root-ca.yml.template  setup.sh  setup_kafka.sh  setup_kafka_dev.sh  setup_kafka_test.sh  setup_mongo.sh  setup_mongo_dev.sh  setup_mongo_test.sh  setup_secrets.sh  setup_secrets_dev.sh  setup_secrets_test.sh  setup_ssl.sh  stalker  tags.txt  tsconfig.base.json  tsconfig.json
.husky/: pre-commit
Orchestrator.Tests/: JobSerializerTests.cs
cron_service/: Dockerfile  Dockerfile.dev  ca.pem  ca.pem.test  client-signed.crt  client-signed.crt.test  client.key  client.key.test  global-setup.ts  global-teardown.ts  network-policy.dev.yml  network-policy.yml  package-lock.json  package.json
database/: Dockerfile  network-policy.dev.yml  network-policy.yml
docs-legacy/: README.md  architecture.md  secrets.md  (+1 more)
job-base-images/python/stalker_job_sdk/: pyproject.toml
job-base-images/python/stalker_job_sdk/stalker_job_sdk/: __init__.py
jobs/job-base-images/python/stalker_job_sdk/: README.md  pyproject.toml
jobs/job-base-images/python/stalker_job_sdk/stalker_job_sdk/: __init__.py
jobs/job-base-images/python/stalker_job_sdk/tests/: __init__.py
(+970 files in other folders)
