[tool.poetry]
name = "stalker-job-sdk"
version = "0.0.1"
description = "Utils for implementing python Stalker jobs."
authors = ["Antoine Boisier-Michaud <aboisiermichaud@gmail.com>"]
readme = "README.md"
packages = [{include = "stalker_job_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
