[tool.poetry]
name = "stalker-job-sdk"
version = "0.0.1"
description = "Utils for implementing python Red Kite jobs."
authors = ["Antoine Boisier-Michaud <aboisiermichaud@gmail.com>"]
readme = "README.md"
packages = [{include = "stalker_job_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
tldextract = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
